--- a/index.html
+++ b/index.html
@@ -187,6 +187,12 @@
         </div>
         <div class="footer-column">
             <h3 class="section-title">Let’s Message me</h3>
+            <form class="contact" >
+                <input type="text" placeholder="Your name">
+            </form>
+            <input type="email" name="" placeholder="Your email" id="">
+            <textarea name="" placeholder="" cols="30" rows="10">Message</textarea>
+            <input class="btn-primary" type="submit" value="Submit">
         </div>
 
     </footer>
